--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="description_hint">Description</string>
     <string name="save_menu">save</string>
     <string name="delete_deal">delete Deal</string>
+    <string name="new_travel_deal">New Travel Deal</string>
+    <string name="logout">Logout</string>
 </resources>
